# generic-ai-agent

./: .dockerignore  .gitignore  API_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_DEPLOYMENT.md  Cargo.toml  Dockerfile  LICENSE  LINKEDIN_POST.md  QUICKSTART-ORGANIZATION.md  README.md  build.rs  com.theagency.daemon.plist  config.example.toml  run-desktop.sh  tauri.conf.json  the-agency.service
.github/: FUNDING.yml
docs/: A2A_COMMUNICATION.md  AGENT_LEARNING_ENHANCEMENT.md  API.md  API_DOCUMENTATION.md  API_EXAMPLES.md  API_IMPLEMENTATION.md  CHANGELOG.md  COLLABORATIVE_WORKSPACE.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  CROSS_PLATFORM_DEPLOYMENT.md  DEPLOYMENT.md  DESKTOP_APP.md  ENHANCEMENTS-SUMMARY.md  EXTERNAL_KNOWLEDGE_LEARNING.md  EXTERNAL_KNOWLEDGE_USAGE.md  IMPLEMENTATION_STATUS.md  INDEX.md  KNOWLEDGE_DEMO_QUICKSTART.md  KNOWLEDGE_MANAGEMENT_SUMMARY.md  KNOWN_ISSUES.md  LLM_CACHE.md  LLM_PROVIDERS.md  LLM_PROVIDER_IMPLEMENTATION.md  MULTI_PROVIDER_ARCHITECTURE.md  NEXT_STEPS.md  ORGANIZATION-A2A-KNOWLEDGE.md  ORGANIZATION.md  ORGANIZATIONAL-LEARNING.md  PAUSE_EXECUTION.md  QUICKSTART-ORGANIZATION.md  QUICK_START_LEARNING.md  README.md  SAGA_WORKFLOW.md  SUSPEND_RESUME.md  TASK_BASED_LLM.md  UNIFIED_STORAGE_README.md  WORKFLOW_BUILDER.md  swagger-ui.html
docs-site/: book.toml
docs-site/src/: SUMMARY.md  architecture.md  configuration.md  getting_started.md  introduction.md
docs-site/src/agent_features/: a2a_communication.md  knowledge_management.md  organizational_learning.md  saga_workflows.md  state_management.md  unified_storage.md
docs-site/src/api_integration/: api_documentation.md  api_examples.md  deployment.md  desktop_app.md
docs-site/src/core_concepts/: llm_cache.md  multi_provider_llms.md  task_based_llm.md
docs-site/src/development/: changelog.md  contributing.md  known_issues.md
docs/humanoid_robot_project/: 01_organization_structure.md
examples/: COLLABORATIVE_COMPARISON.md  COLLABORATIVE_RESULTS.md  COLLABORATIVE_WORKSPACE_SUCCESS.md  COMPLEX_WORKSPACE.md  MODEL_PRESETS.md  MULTI_MODEL_CONFIG.md  PRESET_VERIFICATION.md  README.md  SCALING_ENGINEER_TASKS.md  TESTING.md  WORKSPACE_COMPARISON.md  a2a_communication.rs  add_workflow_ids.py  agent_network_system.rs  collaborative_robotics_complex.rs  collaborative_robotics_enhanced.rs  collaborative_robotics_workspace.rs  collaborative_workspace_config.toml  control_flow_example.rs  control_flow_simple.rs  daemon_api_example.rs  datetime_location_tools.rs  humanoid_robot_project.rs  minimal_org_test.rs  multi_provider_example.rs  multi_provider_usage.rs  onex_organization_example.rs  pause_execution_example.rs  pdf_rag_with_tables.rs  rag_system_comprehensive.rs  rag_system_working.rs  robotech_industries_organization_example.rs  robotics_research_engineer_agent.rs  robotics_research_engineer_example.rs  robotics_scientist_agent.rs  saga_llm_workflow.rs  saga_workflow.rs  scaling_engineer_agent.rs  simple_coordinator_test.rs  simulation_engineer_agent.rs  (+8 more)
examples/docs/: COLLABORATIVE_COMPARISON.md  COLLABORATIVE_RESULTS.md  COLLABORATIVE_WORKSPACE_SUCCESS.md  COMPLEX_WORKSPACE.md  MODEL_PRESETS.md  MULTI_MODEL_CONFIG.md  NAME_MAPPINGS.md  PRESET_VERIFICATION.md  README.md  ROBOTECH-ORGANIZATION.md  ROBOTECH_ARTIFACTS.md  ROBOTICS_AGENTS.md  SCALING_ENGINEER_TASKS.md  WORKSPACE_COMPARISON.md
examples/prompts/: README.md  robotech_prompts.toml
examples/robotics_workspace/: README.md
examples/sample-data/: customer_feedback.txt  draft_content.txt  input.txt  long_document.txt  phrases.txt
examples/workflows/: 01_basic_text_generation.json  02_file_io_workflow.json  03_conditional_routing.json  04_text_chunking.json  05_multi_provider_comparison.json  06_if_then_else_container.json  07_foreach_loop_container.json  08_while_loop_container.json  09_document_chunking_and_summarization.json  10_sentiment_analysis_routing.json  11_batch_translation_loop.json  12_content_quality_pipeline.json  README.md
features/: README.md  a2a_communication.feature  agent_capabilities.feature  knowledge_rag.feature  mcp_integration.feature  multi_agent_organization.feature  multi_provider_llm.feature  unified_storage.feature  workflow_engine.feature
icons/: icon.png.bak
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: README.md  demo-organization.sh  deploy-k8s.sh  install-linux.sh  install-windows.ps1  replace_employee_names.py  replace_names.sh  run-api-examples.sh  run_collaborative_demo.sh
src/: a2a.rs  agent.rs  api.rs  cache.rs  config.rs  error.rs  lib.rs  llm.rs  mcp.rs  memory.rs  organization.rs  saga.rs  tools.rs  ui_workflow_storage.rs  unified_storage.rs  workflow.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/knowledge/: chunker.rs  consolidator.rs  fetcher.rs  manager.rs  mod.rs  types.rs
src/llm/: connection_pool.rs  manager.rs  provider.rs
src/llm/providers/: anthropic.rs  base.rs  google.rs  mod.rs  openai.rs  openai_compatible.rs  openai_variants.rs
src/organization/: a2a_local.rs  coordinator.rs  knowledge_helpers.rs  prompts.rs
static/: index.html
tests/: a2a_tests.rs  bdd_steps.rs  cucumber_runner.rs  datetime_location_tools_tests.rs  llm_provider_bdd.rs  llm_tests.rs  test_helpers.rs  unified_storage_bdd.rs  unified_storage_benchmarks.rs  unified_storage_property_tests.proptest-regressions  unified_storage_property_tests.rs  unified_storage_tests.rs  unit_tests.rs
tests/docs/: README.md  TEST_STATUS.md  TEST_SUMMARY.md
(+4 files in other folders)
