[package]
name = "the-agency"
version = "0.2.0"
edition = "2021"
authors = ["Ravindra Boddipalli <rboddipalli@turingworks.com>"]
description = "A comprehensive AI agent framework with Ollama LLM, vector memory, Document RAG, MCP tools, and multi-agent communication"
license = "MIT"
repository = "https://github.com/ravituringworks/the-agency"
homepage = "https://github.com/ravituringworks/the-agency"
documentation = "https://docs.rs/the-agency"
readme = "README.md"
keywords = ["ai", "agent", "llm", "ollama", "rag", "pdf", "multiagent"]
categories = ["science", "text-processing", "web-programming", "asynchronous"]
include = [
    "src/**/*",
    "examples/**/*", 
    "docs/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md"
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Ollama client
ollama-rs = "0.2"

# Vector store and embeddings (commented out for now as they may not be needed)
# candle-core = "0.6"
# candle-nn = "0.6" 
# candle-transformers = "0.6"
# faiss = { version = "0.12", optional = true }

# Database for vector storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.21"
futures = "0.3"

# JSON-RPC for MCP
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"

# WebSocket support for MCP
tokio-tungstenite = "0.21"

# Async trait
async-trait = "0.1"

# PDF processing and document analysis (optional for RAG examples)
pdf-extract = { version = "0.7", optional = true }
lopdf = { version = "0.32", optional = true }
regex = "1.10"
table-extract = { version = "0.2", optional = true }

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"

# BDD testing
cucumber = "0.20"

# Property-based testing
proptest = "1.0"

# Test utilities
tempfile = "3.0"
serial_test = "3.0"

# Random number generation for tests
rand = "0.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["sqlite"]
sqlite = []
pdf = ["pdf-extract", "lopdf", "table-extract"]

[[bin]]
name = "agent-example"
path = "src/bin/example.rs"

[lib]
name = "the_agency"
path = "src/lib.rs"
